--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,6 +4,145 @@
     }
 }
 
+@media screen and (max-width: 1440px) {
+    .overlay-newest {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 100%;
+        width: 100%;
+        opacity: 0;
+        transition: .5s ease;
+        background-color: rgba(0, 0, 0, 0.719);
+      }
+
+      .judul-karya-newest {
+        color: white;
+        font-size: 32px;
+        position: absolute;
+        top: 80%;
+        left: 25%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        text-align: center;
+        font-weight: bold;
+        text-transform: uppercase;
+      }
+
+      .kreator-karya-newest {
+        color: #fbf348;
+        font-size: 20px;
+        position: absolute;
+        top: 85%;
+        left: 31.5%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        text-align: center;
+        font-weight: bold;
+      }
+
+      .carousel-control-prev {
+        left: -45px;
+      }
+
+      .carousel-control-next {
+        right: -45px;
+      }
+
+      a.uk-position-center-right.uk-position-small.uk-hidden-hover.uk-icon.uk-slidenav-next.uk-slidenav {
+        right: 18%;
+      }
+
+      a.uk-position-center-left.uk-position-small.uk-hidden-hover.uk-icon.uk-slidenav-previous.uk-slidenav {
+        left: 13.5%;
+      }
+
+      .title-new-funfact h1 {
+        font-size: 31px;
+        font-weight: bold;
+      }
+
+      img.d-block.w-100.img-featured {
+        height: 600px;
+        object-fit: cover;
+      }
+
+      .image-newest {
+        display: block;
+        width: 830px;
+        height: 400px;
+      }
+      .slider-container.rev_slider_wrapper.fullscreen-slider {
+        height: 106vh !important;
+        margin-top: 10px !important;
+      }
+}
+
+
+
+
+
+
+  @media screen and (max-width: 1280px){
+    .header-logo-display .menu-display {
+        margin-top: 25px;
+        margin-right: 50px;
+      }
+
+      .judul-karya-newest {
+        color: white;
+        font-size: 32px;
+        position: absolute;
+        top: 80%;
+        left: 30%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        text-align: center;
+        font-weight: bold;
+        text-transform: uppercase;
+      }
+
+      .kreator-karya-newest {
+        color: #fbf348;
+        font-size: 20px;
+        position: absolute;
+        top: 85%;
+        left: 37.5%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        text-align: center;
+        font-weight: bold;
+      }
+
+      .uk-active img.img-news-funfact {
+        width: 85%;
+        height: 500px;
+        object-fit: cover;
+        margin-top: 0 !important;
+        transition: 0.5s;
+        margin-left: 90px;
+      }
+
+      a.uk-position-center-left.uk-position-small.uk-hidden-hover.uk-icon.uk-slidenav-previous.uk-slidenav {
+        left: 10.5%;
+      }
+
+      a.uk-position-center-right.uk-position-small.uk-hidden-hover.uk-icon.uk-slidenav-next.uk-slidenav {
+        right: 21%;
+      }
+
+      .slider-container.rev_slider_wrapper.fullscreen-slider {
+        height: 106vh !important;
+        margin-top: 10px !important;
+      }
+  }
+
 @media screen and (max-width: 999px) {
     .desktop {
         display: none !important;
@@ -101,7 +240,7 @@
     }
 
     section.featured {
-        margin-bottom: 50px;
+        margin-bottom: 0px;
     }
 
     img.img-fluid.img-contact {
@@ -221,139 +360,112 @@
         height: auto;
         margin-top: 10px;
     }
-}
 
-
-
-
-
-
-@media screen and (max-width: 1440px) {
-    .overlay-newest {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: 100%;
-        width: 100%;
-        opacity: 0;
-        transition: .5s ease;
-        background-color: rgba(0, 0, 0, 0.719);
+    .slider-container.rev_slider_wrapper.fullscreen-slider {
+        margin-top: -65px !important;
       }
 
-      .judul-karya-newest {
-        color: white;
-        font-size: 32px;
+      i.bi.bi-chevron-compact-down {
         position: absolute;
-        top: 80%;
-        left: 25%;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        text-align: center;
-        font-weight: bold;
-        text-transform: uppercase;
+        color: #ededed;
+        right: 42.5%;
+        font-size: 70px;
+        top: 90%;
+        z-index: 111;
+        cursor: pointer;
       }
 
-      .kreator-karya-newest {
-        color: #fbf348;
-        font-size: 20px;
-        position: absolute;
-        top: 85%;
-        left: 31.5%;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        text-align: center;
-        font-weight: bold;
+      section.featured {
+        margin-top: 0px;
       }
 
       .carousel-control-prev {
-        left: -45px;
+        left: -15px;
       }
 
       .carousel-control-next {
-        right: -45px;
+        right: -15px;
       }
 
-      a.uk-position-center-right.uk-position-small.uk-hidden-hover.uk-icon.uk-slidenav-next.uk-slidenav {
-        right: 18%;
+      .uk-active img.img-news-funfact{
+          margin-left: 0px;
       }
 
-      a.uk-position-center-left.uk-position-small.uk-hidden-hover.uk-icon.uk-slidenav-previous.uk-slidenav {
-        left: 13.5%;
+      .doodle {
+        display: none;
       }
 
-      .title-new-funfact h1 {
-        font-size: 31px;
-        font-weight: bold;
+      .tag-featured {
+        margin-top: 15px !important;
+        margin-bottom: -15px !important;
       }
 
-      img.d-block.w-100.img-featured {
-        height: 600px;
-        object-fit: cover;
+      section.py-5.newest {
+        padding-top: 30px !important;
+        padding-bottom: 30px !important;
       }
 
-      .image-newest {
-        display: block;
-        width: 830px;
-        height: 400px;
+      section.py-5.about-home {
+        padding-top: 30px !important;
+        padding-bottom: 30px !important;
+      }
+
+      section.py-5.news-home {
+        padding-top: 30px !important;
+        padding-bottom: 30px !important;
+      }
+
+      section.py-5.contact-home {
+        padding-top: 30px !important;
+        padding-bottom: 30px !important;
+      }
+}
+
+@media screen and (max-width: 412px) {
+    .slider-container.rev_slider_wrapper.fullscreen-slider {
+        margin-top: -100px !important;
+      }
+
+}
+
+@media screen and (max-width: 360px) {
+    .slider-container.rev_slider_wrapper.fullscreen-slider {
+        margin-top: -60px !important;
+      }
+}
+
+
+@media screen and (max-width: 393px) {
+    .slider-container.rev_slider_wrapper.fullscreen-slider {
+        margin-top: -70px !important;
+      }
+
+      .judul-karya-newest {
+        color: white;
+        font-size: 25px;
+        position: absolute;
+        top: 65%;
+        left: 35%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        text-align: center;
+        font-weight: 600;
+      }
+
+      .kreator-karya-newest {
+        color: #fbf348;
+        font-size: 12px;
+        position: absolute;
+        top: 73%;
+        left: 34.5%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        text-align: left;
       }
 }
 
 
 
 
-
-
-  @media screen and (max-width: 1280px){
-    .header-logo-display .menu-display {
-        margin-top: 25px;
-        margin-right: 50px;
-      }
-
-      .judul-karya-newest {
-        color: white;
-        font-size: 32px;
-        position: absolute;
-        top: 80%;
-        left: 30%;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        text-align: center;
-        font-weight: bold;
-        text-transform: uppercase;
-      }
-
-      .kreator-karya-newest {
-        color: #fbf348;
-        font-size: 20px;
-        position: absolute;
-        top: 85%;
-        left: 37.5%;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        text-align: center;
-        font-weight: bold;
-      }
-
-      .uk-active img.img-news-funfact {
-        width: 85%;
-        height: 500px;
-        object-fit: cover;
-        margin-top: 0 !important;
-        transition: 0.5s;
-        margin-left: 90px;
-      }
-
-      a.uk-position-center-left.uk-position-small.uk-hidden-hover.uk-icon.uk-slidenav-previous.uk-slidenav {
-        left: 10.5%;
-      }
-
-      a.uk-position-center-right.uk-position-small.uk-hidden-hover.uk-icon.uk-slidenav-next.uk-slidenav {
-        right: 21%;
-      }
-  }
