--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,13 @@ html.side-header-hamburguer-sidebar #header.side-header {
 }
 
   .hamburguer-btn .hamburguer span:nth-child(2) {
-    margin-top: 3px;
+    margin-top: 19px;
   }
   .hamburguer-btn .hamburguer span:nth-child(1) {
-    margin-top: -5px;
+    margin-top: 17px;
   }
   .hamburguer-btn .hamburguer span:nth-child(3) {
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 html.side-header-hamburguer-sidebar #header.side-header.side-header-lg {
@@ -125,7 +125,7 @@ nav.menu-display a:hover {
 }
 
 img.d-block.w-100.img-featured {
-    height: 790px;
+    height: 850px;
     object-fit: cover;
 }
 
@@ -159,7 +159,7 @@ img.d-block.w-100.img-featured {
 h3.title-featured {
     font-size: 40px;
     line-height: 40px;
-    font-weight: bold;
+    font-weight: 800;
     text-transform: uppercase;
 }
 
@@ -172,12 +172,12 @@ h5.tag-featured {
     line-height: 35px;
     text-transform: unset;
     margin-top: 50px;
-    font-weight: bold;
+    font-weight: 800;
 }
 
 h3.newest-titles {
     font-size: 40px;
-    font-weight: bold;
+    font-weight: 800;
     text-transform: uppercase;
 }
 
@@ -200,7 +200,7 @@ a.button-link:hover {
 
 .title-about h3 {
     font-size: 40px;
-    font-weight: bold;
+    font-weight: 800;
     text-transform: uppercase;
 }
 
@@ -243,7 +243,7 @@ a.button-link:hover {
 
 .title-new-funfact h3 {
     font-size: 40px;
-    font-weight: bold;
+    font-weight: 800;
     text-transform: uppercase;
 }
 
@@ -262,7 +262,7 @@ img.img-fluid.img-contact {
 
 .title-contact h3 {
     font-size: 40px;
-    font-weight: bold;
+    font-weight: 800;
     text-transform: uppercase;
 }
 
@@ -289,32 +289,26 @@ footer#footer {
     background: #000000 !important;
 }
 
-.col-md-6.col-lg-4.mb-5.mb-md-0.list-sosial-media-footer {
-    margin-top: 100px;
-}
 
-.col-md-6.col-lg-3.mb-5.mb-lg-0.list-logo-footer ul li a {
+.list-logo-footer ul li a {
     font-size: 20px;
     text-transform: uppercase;
     color: #fff !important;
     margin-left: 7px;
     line-height: 35px;
-}
+  }
 
-.col-md-6.col-lg-4.mb-5.mb-md-0.list-sosial-media-footer ul li a {
+.list-sosial-media-footer ul li a {
     font-size: 20px;
     color: #fff !important;
     line-height: 35px;
 }
 
-.col-md-6.col-lg-3.list-bussiness-footer p {
+.list-bussiness-footer p {
     font-size: 20px;
     color: #fff !important;
 }
 
-.col-md-6.col-lg-3.list-bussiness-footer {
-    margin-top: 100px;
-}
 
 button.btn.btn-large.btn-block.btn-primary {
     padding: 15px;
@@ -801,6 +795,7 @@ html {
     width: 50px;
     transition: ease all 300ms;
     height: 3px;
+    margin-top: 20px;
 }
 
 .carousel-indicators button.active {
@@ -827,6 +822,34 @@ img.doodle {
     position: absolute;
     right: 0;
     width: 300px;
-    z-index: 999999999999999;
+    z-index: 999;
     margin-top: -215px;
+}
+
+
+
+.hamburguer-btn .hamburguer span {
+    position: absolute;
+    left: 0px;
+    width: 60px;
+    height: 4px;
+    transition: ease width 300ms;
+    border-radius: 0px;
+  }
+  
+  .hamburguer-btn.hamburguer-btn-sticky-dark {
+    transform: rotate(90deg);
+    width: 5em;
+    height: 5em;
+  }
+
+  img.logo-footer {
+    margin-left: -25px;
+}
+
+#footer .footer-copyright p {
+    color: rgb(155, 153, 153);
+    margin: 0;
+    padding: 0px 10px;
+    font-size: 14px;
 }
